// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
123<!--prettier-ignore-->456

<span></span><!--prettier-ignore--><span></span>

=====================================output=====================================
123<!--prettier-ignore-->456

<span></span
><!--prettier-ignore--><span></span>

================================================================================
`;

exports[`document.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html>
<html class="no-js" lang="en">
  <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
    <title>Title</title>
  </head>
  <body>
    <!-- prettier-ignore -->
    <p>
      Test  Test   Test
    </p>

    <!-- prettier-ignore -->
    <p attribute  =  "value">
      Test  Test   Test
    </p>

    <!-- prettier-ignore -->
    <ul
      ><li> First  </li
      ><li>Second<i>1</i><div><div>String</div></div></li
    ></ul>

    <!-- prettier-ignore -->
    <div>





    </div>

    <!-- prettier-ignore -->
    <ul><!--
      --><li>   First   </li><!--
      --><li>   Second   </li><!--
    --></ul>

    <!-- prettier-ignore -->
    <br />
  </body>
</html>

=====================================output=====================================
<!doctype html>
<html class="no-js" lang="en">
  <head>
    <meta charset="utf-8" />
    <meta http-equiv="x-ua-compatible" content="ie=edge" />
    <title>Title</title>
  </head>
  <body>
    <!-- prettier-ignore -->
    <p>
      Test  Test   Test
    </p>

    <!-- prettier-ignore -->
    <p attribute  =  "value">
      Test  Test   Test
    </p>

    <!-- prettier-ignore -->
    <ul
      ><li> First  </li
      ><li>Second<i>1</i><div><div>String</div></div></li
    ></ul>

    <!-- prettier-ignore -->
    <div>





    </div>

    <!-- prettier-ignore -->
    <ul><!--
      --><li>   First   </li><!--
      --><li>   Second   </li><!--
    --></ul>

    <!-- prettier-ignore -->
    <br />
  </body>
</html>

================================================================================
`;

exports[`issue-15738.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head></head>
<link
  rel="stylesheet"
  href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
/>
<style>marked-md:not(:defined) { display: none }</style>
<script type="module" src="../auto.js"></script>
<!-- prettier-ignore -->
<marked-md display="block"><plaintext>
# Hello world!

\`\`\`html
<p>Look at these <span id="html">HTML tags</span></p>
<div class="box">They aren't being <code>interpreted</code> as actual HTML</div>
\`\`\`

But this HTML is <mark>actually parsed</mark> just like **normal**.

> <em>Markdown</em> lets you include <strong>arbitrary</strong> <abbr>HTML</abbr> in it.

=====================================output=====================================
<head></head>
<link
  rel="stylesheet"
  href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
/>
<style>
  marked-md:not(:defined) {
    display: none;
  }
</style>
<script type="module" src="../auto.js"></script>
<!-- prettier-ignore -->
<marked-md display="block"><plaintext>
# Hello world!

\`\`\`html
<p>Look at these <span id="html">HTML tags</span></p>
<div class="box">They aren't being <code>interpreted</code> as actual HTML</div>
\`\`\`

But this HTML is <mark>actually parsed</mark> just like **normal**.

> <em>Markdown</em> lets you include <strong>arbitrary</strong> <abbr>HTML</abbr> in it.

================================================================================
`;

exports[`long_lines.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- prettier-ignore -->
A super long string that has been marked as ignore because it was probably generated by some script.

<p>
    Just some ordinary text that should be wrapped up because it is super long and has not been marked as ignore.
</p>

<p>
    <!-- prettier-ignore -->
    A super long string that has been marked as ignore because it was probably generated by some script.
</p>

<!-- prettier-ignore -->
| Dogs | Cats | Weasels | Bats | Pigs | Mice | Hedgehogs | Capybaras | Rats | Tigers |
| ---- | ---- | ------- | ---- | ---- | ---- | --------- | --------- | ---- | ------ |
|    1 |    1 |       0 |    0 |    1 |    1 |         5 |        16 |    4 |      0 |
=====================================output=====================================
<!-- prettier-ignore -->
A super long string that has been marked as ignore because it was probably generated by some script.

<p>
  Just some ordinary text that should be wrapped up because it is super long and
  has not been marked as ignore.
</p>

<p>
  <!-- prettier-ignore -->
  A super long string that has been marked as ignore because it was probably generated by some script.
</p>

<!-- prettier-ignore -->
| Dogs | Cats | Weasels | Bats | Pigs | Mice | Hedgehogs | Capybaras | Rats | Tigers |
| ---- | ---- | ------- | ---- | ---- | ---- | --------- | --------- | ---- | ------ |
|    1 |    1 |       0 |    0 |    1 |    1 |         5 |        16 |    4 |      0 |

================================================================================
`;

exports[`unclosed.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- prettier-ignore -->
<div>
# Hello world!
<span>

=====================================output=====================================
<!-- prettier-ignore -->
<div>
# Hello world!
<span>

================================================================================
`;

exports[`unclosed2.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- prettier-ignore -->
<p>
# Hello world!
<div>

=====================================output=====================================
<!-- prettier-ignore -->
<p>
# Hello world!

<div></div>

================================================================================
`;
